Docs/CI: Add GitHub Action to generate the documentation as a Jekyll site and publish it to GitHub Pages on each commit.

--- a/.github/workflows/mirror-main-branch-to-master-branch.yml
+++ b/.github/workflows/mirror-main-branch-to-master-branch.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - "main"
+      - main
 
 jobs:
   mirror-main-branch-to-master-branch:
@@ -12,6 +12,6 @@ jobs:
       id: mirror
       uses: google/mirror-branch-action@v1.0
       with:
-        source: "main"
-        dest: "master"
+        source: main
+        dest: master
         github-token: ${{ secrets.GITHUB_TOKEN }}
